tests/__snapshots__/api-toBeUnknown.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeUnknown: stderr 1`] = `
"Error: Type 'unknown' is not identical to type 'string'.

   7 |   expect(returnsUnknown()).type.toBeUnknown();
   8 | 
>  9 |   expect(returnsString()).type.toBeUnknown();
     |                                ^
  10 | });
  11 | 
  12 | test("is NOT unknown?", () => {

       at ./__typetests__/toBeUnknown.tst.ts:9:32 ❭ is unknown?

Error: Type 'unknown' is identical to type 'unknown'.

  13 |   expect(returnsString()).type.not.toBeUnknown();
  14 | 
> 15 |   expect(returnsUnknown()).type.not.toBeUnknown();
     |                                     ^
  16 | });
  17 | 

       at ./__typetests__/toBeUnknown.tst.ts:15:37 ❭ is NOT unknown?

"
`;

exports[`toBeUnknown: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeUnknown.tst.ts
  × is unknown?
  × is NOT unknown?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
